# nova

./: .bzrignore  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .project  .pydevproject  .stestr.conf  .testr.conf  .zuul.yaml  AGENTS.md  Authors  CONTRIBUTING.rst  HACKING  HACKING.rst  MAINTAINERS  MANIFEST.in  Makefile  README  README.livemigration.txt  README.md  README.rst  and happy branching  babel.cfg  bandit.yaml  bindep.txt  builddeb.sh  bw.py  commit.sh  concourse_unit_test_task  custom-requirements.txt  exercise_rsapi.py  krm_mapping.json.sample  lower-constraints.txt  mypy-files.txt  nova-api.pid  nova-dist.conf  nova-ifc-template  (+43 more)
.github/workflows/: tox.yml
CA/: .gitignore  geninter.sh  genrootca.sh  genvpn.sh  openssl.cnf.tmpl
api-guide/source/: accelerator-support.rst  conf.py  down_cells.rst  extensions.rst  extra_specs_and_properties.rst  faults.rst  general_info.rst  index.rst  limits.rst  links_and_references.rst  microversions.rst  paginated_collections.rst  polling_changes-since_parameter.rst  polling_changes.rst  port_with_resource_request.rst  request_and_response_formats.rst  server_concepts.rst  users.rst  versions.rst
api-ref/ext/: rest_parameters.py
api-ref/source/: conf.py  diagnostics.inc  extensions.inc  flavors.inc  images.inc  index.rst  ips.inc  limits.inc  metadata.inc  os-agents.inc  os-aggregates.inc  os-assisted-volume-snapshots.inc  os-availability-zone.inc  os-baremetal-nodes.inc  os-cells.inc  os-certificates.inc  os-cloudpipe.inc  os-consoles.inc  os-fixed-ips.inc  os-flavor-access.inc  os-flavor-extra-specs.inc  os-floating-ip-dns.inc  os-floating-ip-pools.inc  os-floating-ips-bulk.inc  os-floating-ips.inc  os-fping.inc  os-hosts.inc  os-hypervisors.inc  os-instance-actions.inc  os-instance-usage-audit-log.inc  os-interface.inc  os-keypairs.inc  os-migrations.inc  os-networks.inc  os-quota-class-sets.inc  os-quota-sets.inc  os-security-group-default-rules.inc  os-security-group-rules.inc  os-security-groups.inc  os-server-external-events.inc  (+33 more)
bzrplugins/novalog/: __init__.py
confortare/rfb/: tag.authvencrypt.py.md
contrib/: clean-on-delete.py  nova-CC-installer.sh  nova.sh  openstack-config  profile_caching_scheduler.sh  redhat-eventlet.patch
contrib/boto_v6/: __init__.py
contrib/puppet/: fileserver.conf  puppet.conf
contrib/xen/: vif-openstack
debian/: changelog  control  nova-api.conf  nova-api.init  nova-api.install  nova-common.dirs  nova-common.install  nova-compute.conf  nova-compute.init  nova-compute.install  nova-dhcpbridge.conf  nova-instancemonitor.init  nova-instancemonitor.install  nova-manage.conf  nova-objectstore.conf  nova-objectstore.init  nova-objectstore.install  nova-objectstore.links  nova-objectstore.nginx.conf  nova-volume.conf  nova-volume.init  nova-volume.install
devstack/: nova-multi-cell-blacklist.txt  nova-multi-cell-exclude-list.txt  plugin.sh  settings  tempest-dsvm-caching-scheduler-rc  tempest-dsvm-cells-rc  tempest-dsvm-lvm-rc  tempest-dsvm-lxc-rc  tempest-dsvm-tempest-xen-rc
devstack/lib/: mdev_samples
doc/: .autogenerated  .gitignore  Makefile  README.rst  dictionary.txt  find_autodoc_modules.sh  find_modules.sh  find_undocumented_classes.sh  generate_autodoc_index.sh  requirements.txt
doc/api_samples/: flavor-get-resp.json  flavor-get-resp.xml  image-get-resp.json  image-get-resp.xml  image-meta-key-get.xml  image-meta-key-put-req.xml  image-metadata-post-resp.json  image-metadata-post-resp.xml  images-details-get-resp.xml  images-list-get-resp.json  images-list-get-resp.xml  limit-get-resp.json  limit-get-resp.xml  server-action-changepassword.xml  server-action-confirmresize.xml  server-action-reboot.json  server-action-rebuild-resp.json  server-get-resp.json  (+20 more)
docs/: architecture.rst  auth.rst  binaries.rst  compute.rst  conf.py  endpoint.rst  fakes.rst  getting.started.rst  index.rst  modules.rst  network.rst  nova.rst  objectstore.rst  packages.rst  storage.rst  volume.rst
etc/: api-paste.ini  nova-api.conf  vmware_guest_tool.py
gate/: README  post_test_hook.sh  post_test_perf_check.sh  test_evacuate.sh
locale/: ast.po  cs.po  da.po  de.po  es.po  it.po  ja.po  nova.pot  pt_BR.po  ru.po  uk.po  zh_CN.po
nova/: __init__.py  adminclient.py  apiservice.py  auth.py  availability_zones.py  baserpc.py  block_device.py  boto_extensions.py  cache_utils.py  config.py  context.py  crypto.py  datastore.old.py  datastore.py  debugger.py  exception.py  exception_wrapper.py  fakememcache.py  fakerabbit.py  fakevirt.py  filesystem.py  filters.py  flags.py  hash_ring.py  hooks.py  i18n.py  loadables.py  log.py  manager.py  metrics.py  middleware.py  models.py  monkey_patch.py  netconf.py  node.py  notifications.py  notifier.py  opts.py  paths.py  policy.py  (+26 more)
nova.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
po/: ast.po  bs.po  cs.po  da.po  de.po  en_AU.po  en_GB.po  es.po  fr.po  it.po  ja.po  ko.po  nova.pot  oc.po  pt_BR.po  ru.po  tl.po  uk.po  zh_CN.po  zh_TW.po
smoketests/: README  __init__.py  admin_smoketests.py  base.py  flags.py  netadmin_smoketests.py  novatestcase.py  openwrt-x86-vmlinuz  proxy.sh  public_network_smoketests.py  random.image  random.kernel  requirements.txt  run_tests.py  smoketest.py  sysadmin_smoketests.py  test_admin.py  test_netadmin.py  test_sysadmin.py  user_smoketests.py
tools/: abandon_old_reviews.sh  activate_venv.sh  build_latex_pdf.sh  check-cherry-picks.sh  clean-vlans  clean_file_locks.py  colorizer.py  ebtables.workaround  enable-pre-commit-hook.sh  euca-get-ajax-console  euca-get-vnc-console  eventlet-patch  flake8wrap.sh  flakes.py  generate-exclude.sh  generate-schemas  hacking.py  install_venv.py  install_venv_common.py  iscsidev.sh  lintstack.py  lintstack.sh  mypywrap.sh  nova-debug  nova-manage.bash_completion  patch_tox_venv.py  pip-requires  placement_api_docs.py  pretty_tox.sh  pretty_tox3.sh  regression_tester.py  releasenotes_tox.sh  reserve-migrations.py  rfc.sh  run-tests-for-diff.sh  run-tests.py  run_pep8.sh  setup_ipchains.sh  setup_iptables.sh  subunit-trace.py  (+4 more)
(+10710 files in other folders)
