[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[tool.autopep8]
aggressive = 3
in-place = true
recursive = true

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "skip"
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
# keep this in-sync with 'mypy.exclude' in '.pre-commit-config.yaml'
files = [
    "nova/compute/manager.py",
    "nova/compute/pci_placement_translator.py",
    "nova/crypto.py",
    "nova/filesystem.py",
    "nova/limit/local.py",
    "nova/limit/placement.py",
    "nova/network/neutron.py",
    "nova/pci/*.py",
    "nova/privsep/path.py",
    "nova/scheduler/client/report.py",
    "nova/scheduler/request_filter.py",
    "nova/scheduler/utils.py",
    "nova/virt/driver.py",
    "nova/virt/hardware.py",
    "nova/virt/libvirt/machine_type_utils.py",
    "nova/virt/libvirt/__init__.py",
    "nova/virt/libvirt/cpu/__init__.py",
    "nova/virt/libvirt/cpu/api.py",
    "nova/virt/libvirt/cpu/core.py",
    "nova/virt/libvirt/driver.py",
    "nova/virt/libvirt/event.py",
    "nova/virt/libvirt/guest.py",
    "nova/virt/libvirt/host.py",
    "nova/virt/libvirt/utils.py",
]
